--- a/github_scorecard.html
+++ b/github_scorecard.html
@@ -43,3 +43,7 @@ async function generateMarkdown() {
 </script>
 </body>
 </html>
+
+
+url of scorecard of all repositories by this html file
+https://raw.githubusercontent.com/Dippp10/github-scorecard-scans/main/github_scorecard.html
